# Panel-Bias-Auditor

./: LICENSE  README.md  pyproject.toml
docs/: ASSAY_PERFORMANCE_VALIDATION.md  BIOLOGICAL_CONTEXT.md  EMPIRICAL_TECHNICAL_TRACKS.md  PUBLIC_VALIDATION_DATASETS.md  SCIENTIFIC_RESEARCH_WORKFLOW.md  TRACK_METADATA.md
examples/: demo_comparison.json  demo_comparison.md  demo_comparison.tsv  demo_critical_regions.bed  demo_difficult_regions.bed  demo_empirical_gc_report.json  demo_empirical_gc_report.md  demo_gc_scan_regions.bed  demo_improved_oncology_panel.bed  demo_oncology_panel.bed  demo_panels.tsv  demo_reference.fa  demo_report.html  demo_report.json  demo_report.md  demo_track_manifest.json  demo_variants.vcf
research/: README.md  __init__.py  assay_performance_enrichment.py  benchmark_regions_to_performance.py  empirical_technical_tracks.py  validate_empirical_tracks.py
research_inputs/: demo_assay_performance.tsv  demo_public_benchmark_regions.bed  demo_public_callable_regions.bed  public_validation_sources.tsv
research_outputs/demo_assay_performance/: demo_assay_performance_enrichment.json  demo_assay_performance_enrichment.md
research_outputs/demo_empirical_tracks/: demo_combined_technical_risk.bed  demo_gc_extremes.bed  demo_gc_report.json  demo_gc_report.md  demo_research_summary.json  demo_research_summary.md  demo_sequence_risk.bed  demo_sequence_risk_report.json  (+3 more)
tests/: test_core.py  test_parsers.py  test_performance.py  test_public_benchmark_conversion.py  test_research_validation.py  test_technical.py  test_tracks_and_batch.py
(+15 files in other folders)
