[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "panel-bias-auditor-lite"
version = "0.1.0"
description = "Dependency-light genomic panel blind-spot and difficult-region auditor."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Panel Bias Auditor contributors" }]
license = { text = "MIT" }

[project.scripts]
panel-bias-auditor = "panel_bias_auditor.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
